small changes to comments

--- a/Starter_Code/NoSQL_analysis_starter.ipynb
+++ b/Starter_Code/NoSQL_analysis_starter.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,8 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 20, 'Hygiene': 20, 'Structural': 20}}\n"
+      " 'scores': {'ConfidenceInManagement': 20, 'Hygiene': 20, 'Structural': 20}}\n",
+      "41\n"
      ]
     }
    ],
@@ -227,7 +228,8 @@
     "count = establishments.count_documents(query)\n",
     "# Display the first document in the results using pprint\n",
     "result = establishments.find_one(query)\n",
-    "pprint(result)"
+    "pprint(result)\n",
+    "print(count)"
    ]
   },
   {
@@ -2272,35 +2274,6 @@
     "count_rating = establishments.count_documents(query)\n",
     "result_rating = establishments.find_one(query)\n",
     "pprint(result_rating)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "65953466",
-   "metadata": {},
-   "source": [
-    "just gonna leave the mistake here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "93c63829",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Find the establishments with London as the Local Authority and has a RatingValue greater than or equal to 4.\n",
-    "# query = {\n",
-    "#     'LocalAuthorityName': 'London',\n",
-    "#     'RatingValue' : {'$gte': 4}\n",
-    "# }\n",
-    "\n",
-    "# # Use count_documents to display the number of documents in the result\n",
-    "# count_rating = establishments.count_documents(query)\n",
-    "\n",
-    "# result_rating = establishments.find_one(query)\n",
-    "# pprint(result_rating)\n",
-    "\n"
    ]
   },
   {
